--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "fakeapi": "json-server --watch ./src/public/db.json"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
