--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "fakeapi": "json-server --watch db.json -p 5000"
+    "fakeapi": "json-server --watch db.json"
   },
   "private": true,
   "dependencies": {
